Fix delete button layout shift (#42)
* Fix delete button layout shift

* Remove border radius and add cross mark

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,11 +72,13 @@ h3 {
 }
 
 h3 button {
-  display: none;
+  will-change: opacity;
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
 }
 
 h3:hover button {
-  display: inline-block;
+  opacity: 1;
 }
 
 button {
